--- a/src/components/UI/Sort/Sort.module.css
+++ b/src/components/UI/Sort/Sort.module.css
@@ -9,13 +9,15 @@
     left: 0;
     right: 0;
     height: 4px;
-    background: var(--primary);
+    /*background: var(--primary);*/
 }
 
 .up:after {
     top: 0;
+    background: #e5e522;
 }
 
 .down:after {
     bottom: 0;
+    background: #d2d217;
 }
